--- a/app/layout.scss
+++ b/app/layout.scss
@@ -20,6 +20,7 @@
 }
 
 html {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
